# TreesHomeWork

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: clang_debug.flags  clang_release.flags  compiler_flags.cmake  gcc_debug.flags  gcc_release.flags
common/: timer.hpp
src/app/: main.cpp
src/tree/: trees.hpp
tests/: test.cpp  test_solution.cpp  unit_test_avl.cpp
